# streaming-skeletons

iperf/: .gitignore  README.md  pyproject.toml
iperf/piperf3/: README.md  client_example.yaml  example.env  iperf3-man.txt  pydantic_settings.md  pyproject.toml  server_example.yaml
iperf/piperf3/examples/: client_example.yaml  example.env  server_example.yaml
iperf/piperf3/scripts/: performance_comparison.sh  run_matrix_test.sh  run_node_to_node.sh
iperf/piperf3/src/piperf3/: __init__.py  cli.py  config.py  models.py  plotting.py  runner.py
iperf/scripts/: common.sh  gpu_to_gpu_node.sh  iperf_plot_util.py  node_node.sh  plot_iperf_data.ipynb
iperf/scripts/perlmutter/cpu-cpu/: .env  piperf.sh
iperf/scripts/results_one_server_one_client/: proc0_client_NUMA_2.out  proc0_server_NUMA_2.out  proc1_client_NUMA_2.out  proc1_server_NUMA_2.out  proc2_client_NUMA_2.out  proc2_server_NUMA_2.out  proc3_client_NUMA_2.out  proc3_server_NUMA_2.out
iperf/scripts/vista/grace-hopper/: .env  piperf.sh  piperf_numactl.sh
zmq/python/scripts/: node_node.sh
zmq/python/src/hpc_streaming_skeletons/: settings.py  worker.py
